--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,9 @@
     "com.unity.ide.rider": "3.0.31",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.9.0",
+    "com.unity.services.authentication": "3.3.3",
+    "com.unity.services.cloudsave": "3.2.0",
+    "com.unity.services.leaderboards": "2.1.0",
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualscripting": "1.9.4",
